Parser/y.output
Terminals unused in grammar

   NOT
   LSB
   RSB
   QUOTA
   COMMENT


State 0 conflicts: 5 shift/reduce
State 161 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: external_declaration
    2        | program external_declaration
    3        | %empty

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: type_specifier declarator compound_statement
    7                    | type_specifier declarator declaration_list compound_statement

    8 declaration_list: declaration
    9                 | declaration_list declaration

   10 compound_statement: LCB RCB
   11                   | LCB block_item_list RCB

   12 block_item_list: block_item
   13                | block_item_list block_item

   14 block_item: declaration
   15           | statement

   16 statement: compound_statement
   17          | expression_statement
   18          | selection_statement
   19          | iteration_statement
   20          | jump_statement
   21          | print_func

   22 expression_statement: SEMICOLON
   23                     | expression SEMICOLON

   24 expression: assignment_expression
   25           | expression COMMA assignment_expression

   26 selection_statement: IF LB expression RB statement ELSE statement
   27                    | IF LB expression RB statement

   28 iteration_statement: WHILE LB expression RB statement
   29                    | FOR LB expression_statement expression_statement RB statement
   30                    | FOR LB expression_statement expression_statement expression RB statement
   31                    | FOR LB declaration expression_statement RB statement
   32                    | FOR LB declaration expression_statement expression RB statement

   33 jump_statement: CONT SEMICOLON
   34               | BREAK SEMICOLON
   35               | RET SEMICOLON
   36               | RET expression SEMICOLON

   37 print_func: PRINT LB STR_CONST RB SEMICOLON
   38           | PRINT LB ID RB SEMICOLON

   39 declaration: type_specifier init_declarator_list SEMICOLON

   40 init_declarator_list: init_declarator
   41                     | init_declarator_list COMMA init_declarator

   42 init_declarator: declarator
   43                | declarator ASGN initializer

   44 declarator: ID
   45           | LB declarator RB
   46           | declarator LB parameter_list RB
   47           | declarator LB RB
   48           | declarator LB identifier_list RB

   49 parameter_list: parameter_declaration
   50               | parameter_list COMMA parameter_declaration

   51 parameter_declaration: type_specifier declarator
   52                      | type_specifier

   53 identifier_list: ID
   54                | identifier_list COMMA ID

   55 initializer: assignment_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 conditional_expression: logical_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR logical_and_expression

   61 logical_and_expression: equality_expression
   62                       | logical_and_expression AND equality_expression

   63 equality_expression: relational_expression
   64                    | equality_expression EQ relational_expression
   65                    | equality_expression NE relational_expression

   66 relational_expression: additive_expression
   67                      | relational_expression MT additive_expression
   68                      | relational_expression LT additive_expression
   69                      | relational_expression MTE additive_expression
   70                      | relational_expression LTE additive_expression

   71 additive_expression: multiplicative_expression
   72                    | additive_expression ADD multiplicative_expression
   73                    | additive_expression SUB multiplicative_expression

   74 multiplicative_expression: unary_expression
   75                          | multiplicative_expression MUL unary_expression
   76                          | multiplicative_expression DIV unary_expression
   77                          | multiplicative_expression MOD unary_expression

   78 unary_expression: postfix_expression
   79                 | INC unary_expression
   80                 | DEC unary_expression

   81 postfix_expression: primary_expression
   82                   | postfix_expression LB RB
   83                   | postfix_expression LB argument_expression_list RB
   84                   | postfix_expression INC
   85                   | postfix_expression DEC

   86 primary_expression: ID
   87                   | I_CONST
   88                   | F_CONST
   89                   | STR_CONST
   90                   | TRUE
   91                   | FALSE

   92 argument_expression_list: assignment_expression
   93                         | argument_expression_list COMMA assignment_expression

   94 assignment_operator: ASGN
   95                    | MULASGN
   96                    | DIVASGN
   97                    | MODASGN
   98                    | ADDASGN
   99                    | SUBASGN

  100 type_specifier: INT
  101               | FLOAT
  102               | BOOL
  103               | STRING
  104               | VOID


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 72
SUB (259) 73
MUL (260) 75
DIV (261) 76
MOD (262) 77
INC (263) 79 84
DEC (264) 80 85
MT (265) 67
LT (266) 68
MTE (267) 69
LTE (268) 70
EQ (269) 64
NE (270) 65
ASGN (271) 43 94
ADDASGN (272) 98
SUBASGN (273) 99
MULASGN (274) 95
DIVASGN (275) 96
MODASGN (276) 97
AND (277) 62
OR (278) 60
NOT (279)
LB (280) 26 27 28 29 30 31 32 37 38 45 46 47 48 82 83
RB (281) 26 27 28 29 30 31 32 37 38 45 46 47 48 82 83
LCB (282) 10 11
RCB (283) 10 11
LSB (284)
RSB (285)
COMMA (286) 25 41 50 54 93
SEMICOLON (287) 22 23 33 34 35 36 37 38 39
QUOTA (288)
PRINT (289) 37 38
IF (290) 26 27
ELSE (291) 26
FOR (292) 29 30 31 32
WHILE (293) 28
RET (294) 35 36
CONT (295) 33
BREAK (296) 34
COMMENT (297)
STR_CONST (298) 37 89
I_CONST (299) 87
F_CONST (300) 88
ID (301) 38 44 53 54 86
TRUE (302) 90
FALSE (303) 91
STRING (304) 103
INT (305) 100
FLOAT (306) 101
VOID (307) 104
BOOL (308) 102


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2 3, on right: 0 2
external_declaration (56)
    on left: 4 5, on right: 1 2
function_definition (57)
    on left: 6 7, on right: 4
declaration_list (58)
    on left: 8 9, on right: 7 9
compound_statement (59)
    on left: 10 11, on right: 6 7 16
block_item_list (60)
    on left: 12 13, on right: 11 13
block_item (61)
    on left: 14 15, on right: 12 13
statement (62)
    on left: 16 17 18 19 20 21, on right: 15 26 27 28 29 30 31 32
expression_statement (63)
    on left: 22 23, on right: 17 29 30 31 32
expression (64)
    on left: 24 25, on right: 23 25 26 27 28 30 32 36
selection_statement (65)
    on left: 26 27, on right: 18
iteration_statement (66)
    on left: 28 29 30 31 32, on right: 19
jump_statement (67)
    on left: 33 34 35 36, on right: 20
print_func (68)
    on left: 37 38, on right: 21
declaration (69)
    on left: 39, on right: 5 8 9 14 31 32
init_declarator_list (70)
    on left: 40 41, on right: 39 41
init_declarator (71)
    on left: 42 43, on right: 40 41
declarator (72)
    on left: 44 45 46 47 48, on right: 6 7 42 43 45 46 47 48 51
parameter_list (73)
    on left: 49 50, on right: 46 50
parameter_declaration (74)
    on left: 51 52, on right: 49 50
identifier_list (75)
    on left: 53 54, on right: 48 54
initializer (76)
    on left: 55, on right: 43
assignment_expression (77)
    on left: 56 57, on right: 24 25 55 57 92 93
conditional_expression (78)
    on left: 58, on right: 56
logical_or_expression (79)
    on left: 59 60, on right: 58 60
logical_and_expression (80)
    on left: 61 62, on right: 59 60 62
equality_expression (81)
    on left: 63 64 65, on right: 61 62 64 65
relational_expression (82)
    on left: 66 67 68 69 70, on right: 63 64 65 67 68 69 70
additive_expression (83)
    on left: 71 72 73, on right: 66 67 68 69 70 72 73
multiplicative_expression (84)
    on left: 74 75 76 77, on right: 71 72 73 75 76 77
unary_expression (85)
    on left: 78 79 80, on right: 57 74 75 76 77 79 80
postfix_expression (86)
    on left: 81 82 83 84 85, on right: 78 82 83 84 85
primary_expression (87)
    on left: 86 87 88 89 90 91, on right: 81
argument_expression_list (88)
    on left: 92 93, on right: 83 93
assignment_operator (89)
    on left: 94 95 96 97 98 99, on right: 57
type_specifier (90)
    on left: 100 101 102 103 104, on right: 6 7 39 51 52


State 0

    0 $accept: . program $end

    STRING  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    STRING    [reduce using rule 3 (program)]
    INT       [reduce using rule 3 (program)]
    FLOAT     [reduce using rule 3 (program)]
    VOID      [reduce using rule 3 (program)]
    BOOL      [reduce using rule 3 (program)]
    $default  reduce using rule 3 (program)

    program               go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 1

  103 type_specifier: STRING .

    $default  reduce using rule 103 (type_specifier)


State 2

  100 type_specifier: INT .

    $default  reduce using rule 100 (type_specifier)


State 3

  101 type_specifier: FLOAT .

    $default  reduce using rule 101 (type_specifier)


State 4

  104 type_specifier: VOID .

    $default  reduce using rule 104 (type_specifier)


State 5

  102 type_specifier: BOOL .

    $default  reduce using rule 102 (type_specifier)


State 6

    0 $accept: program . $end
    2 program: program . external_declaration

    $end    shift, and go to state 11
    STRING  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    external_declaration  go to state 12
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 7

    1 program: external_declaration .

    $default  reduce using rule 1 (program)


State 8

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 9

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 10

    6 function_definition: type_specifier . declarator compound_statement
    7                    | type_specifier . declarator declaration_list compound_statement
   39 declaration: type_specifier . init_declarator_list SEMICOLON

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    init_declarator_list  go to state 15
    init_declarator       go to state 16
    declarator            go to state 17


State 11

    0 $accept: program $end .

    $default  accept


State 12

    2 program: program external_declaration .

    $default  reduce using rule 2 (program)


State 13

   45 declarator: LB . declarator RB

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    declarator  go to state 18


State 14

   44 declarator: ID .

    $default  reduce using rule 44 (declarator)


State 15

   39 declaration: type_specifier init_declarator_list . SEMICOLON
   41 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 19
    SEMICOLON  shift, and go to state 20


State 16

   40 init_declarator_list: init_declarator .

    $default  reduce using rule 40 (init_declarator_list)


State 17

    6 function_definition: type_specifier declarator . compound_statement
    7                    | type_specifier declarator . declaration_list compound_statement
   42 init_declarator: declarator .
   43                | declarator . ASGN initializer
   46 declarator: declarator . LB parameter_list RB
   47           | declarator . LB RB
   48           | declarator . LB identifier_list RB

    ASGN    shift, and go to state 21
    LB      shift, and go to state 22
    LCB     shift, and go to state 23
    STRING  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 42 (init_declarator)

    declaration_list    go to state 24
    compound_statement  go to state 25
    declaration         go to state 26
    type_specifier      go to state 27


State 18

   45 declarator: LB declarator . RB
   46           | declarator . LB parameter_list RB
   47           | declarator . LB RB
   48           | declarator . LB identifier_list RB

    LB  shift, and go to state 22
    RB  shift, and go to state 28


State 19

   41 init_declarator_list: init_declarator_list COMMA . init_declarator

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    init_declarator  go to state 29
    declarator       go to state 30


State 20

   39 declaration: type_specifier init_declarator_list SEMICOLON .

    $default  reduce using rule 39 (declaration)


State 21

   43 init_declarator: declarator ASGN . initializer

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    initializer                go to state 39
    assignment_expression      go to state 40
    conditional_expression     go to state 41
    logical_or_expression      go to state 42
    logical_and_expression     go to state 43
    equality_expression        go to state 44
    relational_expression      go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 48
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 22

   46 declarator: declarator LB . parameter_list RB
   47           | declarator LB . RB
   48           | declarator LB . identifier_list RB

    RB      shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    parameter_list         go to state 53
    parameter_declaration  go to state 54
    identifier_list        go to state 55
    type_specifier         go to state 56


State 23

   10 compound_statement: LCB . RCB
   11                   | LCB . block_item_list RCB

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    LCB        shift, and go to state 23
    RCB        shift, and go to state 57
    SEMICOLON  shift, and go to state 58
    PRINT      shift, and go to state 59
    IF         shift, and go to state 60
    FOR        shift, and go to state 61
    WHILE      shift, and go to state 62
    RET        shift, and go to state 63
    CONT       shift, and go to state 64
    BREAK      shift, and go to state 65
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38
    STRING     shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    BOOL       shift, and go to state 5

    compound_statement         go to state 66
    block_item_list            go to state 67
    block_item                 go to state 68
    statement                  go to state 69
    expression_statement       go to state 70
    expression                 go to state 71
    selection_statement        go to state 72
    iteration_statement        go to state 73
    jump_statement             go to state 74
    print_func                 go to state 75
    declaration                go to state 76
    assignment_expression      go to state 77
    conditional_expression     go to state 41
    logical_or_expression      go to state 42
    logical_and_expression     go to state 43
    equality_expression        go to state 44
    relational_expression      go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 48
    postfix_expression         go to state 49
    primary_expression         go to state 50
    type_specifier             go to state 27


State 24

    7 function_definition: type_specifier declarator declaration_list . compound_statement
    9 declaration_list: declaration_list . declaration

    LCB     shift, and go to state 23
    STRING  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    compound_statement  go to state 78
    declaration         go to state 79
    type_specifier      go to state 27


State 25

    6 function_definition: type_specifier declarator compound_statement .

    $default  reduce using rule 6 (function_definition)


State 26

    8 declaration_list: declaration .

    $default  reduce using rule 8 (declaration_list)


State 27

   39 declaration: type_specifier . init_declarator_list SEMICOLON

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    init_declarator_list  go to state 15
    init_declarator       go to state 16
    declarator            go to state 30


State 28

   45 declarator: LB declarator RB .

    $default  reduce using rule 45 (declarator)


State 29

   41 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 41 (init_declarator_list)


State 30

   42 init_declarator: declarator .
   43                | declarator . ASGN initializer
   46 declarator: declarator . LB parameter_list RB
   47           | declarator . LB RB
   48           | declarator . LB identifier_list RB

    ASGN  shift, and go to state 21
    LB    shift, and go to state 22

    $default  reduce using rule 42 (init_declarator)


State 31

   79 unary_expression: INC . unary_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    unary_expression    go to state 80
    postfix_expression  go to state 49
    primary_expression  go to state 50


State 32

   80 unary_expression: DEC . unary_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    unary_expression    go to state 81
    postfix_expression  go to state 49
    primary_expression  go to state 50


State 33

   89 primary_expression: STR_CONST .

    $default  reduce using rule 89 (primary_expression)


State 34

   87 primary_expression: I_CONST .

    $default  reduce using rule 87 (primary_expression)


State 35

   88 primary_expression: F_CONST .

    $default  reduce using rule 88 (primary_expression)


State 36

   86 primary_expression: ID .

    $default  reduce using rule 86 (primary_expression)


State 37

   90 primary_expression: TRUE .

    $default  reduce using rule 90 (primary_expression)


State 38

   91 primary_expression: FALSE .

    $default  reduce using rule 91 (primary_expression)


State 39

   43 init_declarator: declarator ASGN initializer .

    $default  reduce using rule 43 (init_declarator)


State 40

   55 initializer: assignment_expression .

    $default  reduce using rule 55 (initializer)


State 41

   56 assignment_expression: conditional_expression .

    $default  reduce using rule 56 (assignment_expression)


State 42

   58 conditional_expression: logical_or_expression .
   60 logical_or_expression: logical_or_expression . OR logical_and_expression

    OR  shift, and go to state 82

    $default  reduce using rule 58 (conditional_expression)


State 43

   59 logical_or_expression: logical_and_expression .
   62 logical_and_expression: logical_and_expression . AND equality_expression

    AND  shift, and go to state 83

    $default  reduce using rule 59 (logical_or_expression)


State 44

   61 logical_and_expression: equality_expression .
   64 equality_expression: equality_expression . EQ relational_expression
   65                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 84
    NE  shift, and go to state 85

    $default  reduce using rule 61 (logical_and_expression)


State 45

   63 equality_expression: relational_expression .
   67 relational_expression: relational_expression . MT additive_expression
   68                      | relational_expression . LT additive_expression
   69                      | relational_expression . MTE additive_expression
   70                      | relational_expression . LTE additive_expression

    MT   shift, and go to state 86
    LT   shift, and go to state 87
    MTE  shift, and go to state 88
    LTE  shift, and go to state 89

    $default  reduce using rule 63 (equality_expression)


State 46

   66 relational_expression: additive_expression .
   72 additive_expression: additive_expression . ADD multiplicative_expression
   73                    | additive_expression . SUB multiplicative_expression

    ADD  shift, and go to state 90
    SUB  shift, and go to state 91

    $default  reduce using rule 66 (relational_expression)


State 47

   71 additive_expression: multiplicative_expression .
   75 multiplicative_expression: multiplicative_expression . MUL unary_expression
   76                          | multiplicative_expression . DIV unary_expression
   77                          | multiplicative_expression . MOD unary_expression

    MUL  shift, and go to state 92
    DIV  shift, and go to state 93
    MOD  shift, and go to state 94

    $default  reduce using rule 71 (additive_expression)


State 48

   57 assignment_expression: unary_expression . assignment_operator assignment_expression
   74 multiplicative_expression: unary_expression .

    ASGN     shift, and go to state 95
    ADDASGN  shift, and go to state 96
    SUBASGN  shift, and go to state 97
    MULASGN  shift, and go to state 98
    DIVASGN  shift, and go to state 99
    MODASGN  shift, and go to state 100

    $default  reduce using rule 74 (multiplicative_expression)

    assignment_operator  go to state 101


State 49

   78 unary_expression: postfix_expression .
   82 postfix_expression: postfix_expression . LB RB
   83                   | postfix_expression . LB argument_expression_list RB
   84                   | postfix_expression . INC
   85                   | postfix_expression . DEC

    INC  shift, and go to state 102
    DEC  shift, and go to state 103
    LB   shift, and go to state 104

    $default  reduce using rule 78 (unary_expression)


State 50

   81 postfix_expression: primary_expression .

    $default  reduce using rule 81 (postfix_expression)


State 51

   47 declarator: declarator LB RB .

    $default  reduce using rule 47 (declarator)


State 52

   53 identifier_list: ID .

    $default  reduce using rule 53 (identifier_list)


State 53

   46 declarator: declarator LB parameter_list . RB
   50 parameter_list: parameter_list . COMMA parameter_declaration

    RB     shift, and go to state 105
    COMMA  shift, and go to state 106


State 54

   49 parameter_list: parameter_declaration .

    $default  reduce using rule 49 (parameter_list)


State 55

   48 declarator: declarator LB identifier_list . RB
   54 identifier_list: identifier_list . COMMA ID

    RB     shift, and go to state 107
    COMMA  shift, and go to state 108


State 56

   51 parameter_declaration: type_specifier . declarator
   52                      | type_specifier .

    LB  shift, and go to state 13
    ID  shift, and go to state 14

    $default  reduce using rule 52 (parameter_declaration)

    declarator  go to state 109


State 57

   10 compound_statement: LCB RCB .

    $default  reduce using rule 10 (compound_statement)


State 58

   22 expression_statement: SEMICOLON .

    $default  reduce using rule 22 (expression_statement)


State 59

   37 print_func: PRINT . LB STR_CONST RB SEMICOLON
   38           | PRINT . LB ID RB SEMICOLON

    LB  shift, and go to state 110


State 60

   26 selection_statement: IF . LB expression RB statement ELSE statement
   27                    | IF . LB expression RB statement

    LB  shift, and go to state 111


State 61

   29 iteration_statement: FOR . LB expression_statement expression_statement RB statement
   30                    | FOR . LB expression_statement expression_statement expression RB statement
   31                    | FOR . LB declaration expression_statement RB statement
   32                    | FOR . LB declaration expression_statement expression RB statement

    LB  shift, and go to state 112


State 62

   28 iteration_statement: WHILE . LB expression RB statement

    LB  shift, and go to state 113


State 63

   35 jump_statement: RET . SEMICOLON
   36               | RET . expression SEMICOLON

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    SEMICOLON  shift, and go to state 114
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    expression                 go to state 115
    assignment_expression      go to state 77
    conditional_expression     go to state 41
    logical_or_expression      go to state 42
    logical_and_expression     go to state 43
    equality_expression        go to state 44
    relational_expression      go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 48
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 64

   33 jump_statement: CONT . SEMICOLON

    SEMICOLON  shift, and go to state 116


State 65

   34 jump_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 117


State 66

   16 statement: compound_statement .

    $default  reduce using rule 16 (statement)


State 67

   11 compound_statement: LCB block_item_list . RCB
   13 block_item_list: block_item_list . block_item

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    LCB        shift, and go to state 23
    RCB        shift, and go to state 118
    SEMICOLON  shift, and go to state 58
    PRINT      shift, and go to state 59
    IF         shift, and go to state 60
    FOR        shift, and go to state 61
    WHILE      shift, and go to state 62
    RET        shift, and go to state 63
    CONT       shift, and go to state 64
    BREAK      shift, and go to state 65
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38
    STRING     shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    BOOL       shift, and go to state 5

    compound_statement         go to state 66
    block_item                 go to state 119
    statement                  go to state 69
    expression_statement       go to state 70
    expression                 go to state 71
    selection_statement        go to state 72
    iteration_statement        go to state 73
    jump_statement             go to state 74
    print_func                 go to state 75
    declaration                go to state 76
    assignment_expression      go to state 77
    conditional_expression     go to state 41
    logical_or_expression      go to state 42
    logical_and_expression     go to state 43
    equality_expression        go to state 44
    relational_expression      go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 48
    postfix_expression         go to state 49
    primary_expression         go to state 50
    type_specifier             go to state 27


State 68

   12 block_item_list: block_item .

    $default  reduce using rule 12 (block_item_list)


State 69

   15 block_item: statement .

    $default  reduce using rule 15 (block_item)


State 70

   17 statement: expression_statement .

    $default  reduce using rule 17 (statement)


State 71

   23 expression_statement: expression . SEMICOLON
   25 expression: expression . COMMA assignment_expression

    COMMA      shift, and go to state 120
    SEMICOLON  shift, and go to state 121


State 72

   18 statement: selection_statement .

    $default  reduce using rule 18 (statement)


State 73

   19 statement: iteration_statement .

    $default  reduce using rule 19 (statement)


State 74

   20 statement: jump_statement .

    $default  reduce using rule 20 (statement)


State 75

   21 statement: print_func .

    $default  reduce using rule 21 (statement)


State 76

   14 block_item: declaration .

    $default  reduce using rule 14 (block_item)


State 77

   24 expression: assignment_expression .

    $default  reduce using rule 24 (expression)


State 78

    7 function_definition: type_specifier declarator declaration_list compound_statement .

    $default  reduce using rule 7 (function_definition)


State 79

    9 declaration_list: declaration_list declaration .

    $default  reduce using rule 9 (declaration_list)


State 80

   79 unary_expression: INC unary_expression .

    $default  reduce using rule 79 (unary_expression)


State 81

   80 unary_expression: DEC unary_expression .

    $default  reduce using rule 80 (unary_expression)


State 82

   60 logical_or_expression: logical_or_expression OR . logical_and_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    logical_and_expression     go to state 122
    equality_expression        go to state 44
    relational_expression      go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 83

   62 logical_and_expression: logical_and_expression AND . equality_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    equality_expression        go to state 124
    relational_expression      go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 84

   64 equality_expression: equality_expression EQ . relational_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    relational_expression      go to state 125
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 85

   65 equality_expression: equality_expression NE . relational_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    relational_expression      go to state 126
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 86

   67 relational_expression: relational_expression MT . additive_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    additive_expression        go to state 127
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 87

   68 relational_expression: relational_expression LT . additive_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    additive_expression        go to state 128
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 88

   69 relational_expression: relational_expression MTE . additive_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    additive_expression        go to state 129
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 89

   70 relational_expression: relational_expression LTE . additive_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    additive_expression        go to state 130
    multiplicative_expression  go to state 47
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 90

   72 additive_expression: additive_expression ADD . multiplicative_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    multiplicative_expression  go to state 131
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 91

   73 additive_expression: additive_expression SUB . multiplicative_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    multiplicative_expression  go to state 132
    unary_expression           go to state 123
    postfix_expression         go to state 49
    primary_expression         go to state 50


State 92

   75 multiplicative_expression: multiplicative_expression MUL . unary_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    unary_expression    go to state 133
    postfix_expression  go to state 49
    primary_expression  go to state 50


State 93

   76 multiplicative_expression: multiplicative_expression DIV . unary_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    unary_expression    go to state 134
    postfix_expression  go to state 49
    primary_expression  go to state 50


State 94

   77 multiplicative_expression: multiplicative_expression MOD . unary_expression

    INC        shift, and go to state 31
    DEC        shift, and go to state 32
    STR_CONST  shift, and go to state 33
    I_CONST    shift, and go to state 34
    F_CONST    shift, and go to state 35
    ID         shift, and go to state 36
    TRUE       shift, and go to state 37
    FALSE      shift, and go to state 38

    unary_expression    go to state 135
    postfix_expression  go to state 49
    primary_expression  go to state 50


State 95

   94 assignment_operator: ASGN .

    $default  reduce using rule 94 (assignment_operator)


State 96

   98 assignment_operator: ADDASGN .

    $default  reduce using rule 98 (assignment_operator)


State 97

   99 assignment_operator: SUBASGN .

    $default  reduce using rule 99 (assignment_operator)


State 98

   95 assignment_operator: MULASGN .

    $default  reduce using rule 95 (assignment_operator)


State 99

   96 assignment_operator: DIVASGN .

    $default  reduce using rule 96 (assignment_operator)


State 100

   97 assignment_operator: MODASGN .

    $default  reduce using rule 97 (assignment_operator)


State 101

   57 assignment_expression: unary_expression assignment_operator . assignment_expression
